# iguana

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  c.bat  configure-makefiles.sh  configure-sanitizers.sh  configure-vs2022.bat  iguana.sln  iguana.vcxproj  iguana.vcxproj.filters  main.cpp  test_input.s
iguana/: ans1.cpp  ans1.h  ans32.cpp  ans32.h  ans_bitstream.cpp  ans_bitstream.h  ans_byte_statistics.cpp  ans_byte_statistics.h  ans_decoder.cpp  ans_decoder.h  ans_encoder.cpp  ans_encoder.h  ans_histogram.cpp  ans_histogram.h  ans_nibble.cpp  ans_nibble.h  ans_nibble_statistics.cpp  ans_nibble_statistics.h  ans_statistics.cpp  ans_statistics.h  bitops.h  buffer.cpp  buffer.h  c_bindings.cpp  c_bindings.h  command.h  common.cpp  common.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  entropy.cpp  entropy.h  error.cpp  error.h  file.cpp  file.h  input_stream.h  memops.h  (+5 more)
